Refactored graph reporters to use DirectedGraph and cleaned up interfaces

--- a/inst/package_report/package_function_reporter.Rmd
+++ b/inst/package_report/package_function_reporter.Rmd
@@ -7,14 +7,18 @@ output: html_document
 
 Here's an overview of the functions defined in **`r reporter$pkg_name`**.
 
+```{r echo = FALSE, error = TRUE}
+reporter$calculate_default_measures()
+```
+
 ### Visualization
 
-```{r echo=FALSE}
+```{r echo = FALSE, error = TRUE}
 reporter$graph_viz
 ```
 
 ### Table
 
-```{r}
+```{r error = TRUE}
 reporter$get_summary_view()
 ```
