--- a/inst/package_report/package_dependency_reporter.Rmd
+++ b/inst/package_report/package_dependency_reporter.Rmd
@@ -3,24 +3,18 @@
 
 Here's an overview of of the packages **`r reporter$pkg_name`** relies upon.
 
+```{r echo = FALSE, error = TRUE}
+reporter$calculate_default_measures()
+```
+
 ### Visualization
 
-```{r pressure, echo=FALSE}
-result <- tryCatch({
-    reporter$graph_viz
-}, error = function(e){
-    return(sprintf("DependencyReporter failed with error -->     %s", e$message))
-})
-result
+```{r echo = FALSE, error = TRUE}
+reporter$graph_viz
 ```
 
 ### Table
 
-```{r}
-result <- tryCatch({
-    reporter$get_summary_view()
-}, error = function(e){
-    return(sprintf("DependencyReporter failed with error %s", e$message))
-})
-result
+```{r error = TRUE}
+reporter$get_summary_view()
 ```
