--- a/vignettes/pkgnet-intro.Rmd
+++ b/vignettes/pkgnet-intro.Rmd
@@ -312,23 +312,23 @@ report2 <- CreatePackageReport(
 funcNodes <- report2$FunctionReporter$nodes
 
 # List Coverage For Most Depended-on Functions
-mostRef <- funcNodes[order(recursiveRevDeps, decreasing = TRUE),
-                     .(node, recursiveRevDeps, coverageRatio, totalLines)
+mostRef <- funcNodes[order(numRecursiveRevDeps, decreasing = TRUE),
+                     .(node, numRecursiveRevDeps, coverageRatio, totalLines)
                      ][1:10]
 ```
 
 ```{r fakeDetail1Results, eval=FALSE}
-#>             node recursiveRevDeps coverageRatio totalLines
-#>  1:        month               81             1          1
-#>  2:           tz               79             1          1
-#>  3: reclass_date               68             1          1
-#>  4:         date               67             1          1
-#>  5:      is.Date               60             1          1
-#>  6:    is.POSIXt               57             1          1
-#>  7:         wday               56             1          1
-#>  8:   is.POSIXct               55             1          1
-#>  9:  .deprecated               55             0         10
-#> 10:      as_date               52             1          1
+#>             node numRecursiveRevDeps coverageRatio totalLines
+#>  1:        month                  81             1          1
+#>  2:           tz                  79             1          1
+#>  3: reclass_date                  68             1          1
+#>  4:         date                  67             1          1
+#>  5:      is.Date                  60             1          1
+#>  6:    is.POSIXt                  57             1          1
+#>  7:         wday                  56             1          1
+#>  8:   is.POSIXct                  55             1          1
+#>  9:  .deprecated                  55             0         10
+#> 10:      as_date                  52             1          1
 ```
 
 Inspecting results such as these can help an R package developer decide which function to cover with unit tests next.  
