Try changing pkg_path to work with Travis

--- a/vignettes/pkgnet-report.Rmd
+++ b/vignettes/pkgnet-report.Rmd
@@ -26,7 +26,7 @@ reporters <- list(DependencyReporter$new(), FunctionReporter$new(), InheritanceR
 reporters <- lapply(
           X = reporters
           , FUN = function(reporter){
-              reporter$set_package(pkg_name = "pkgnet", "~/repos/pkgnet" )
+              reporter$set_package(pkg_name = "pkgnet", "." )
               return(reporter)
           }
       )
