--- a/vignettes/publishing-reports.Rmd
+++ b/vignettes/publishing-reports.Rmd
@@ -34,7 +34,7 @@ If this is your first R Markdown vignette for your package, you'll want to add `
 
 The R Markdown file generated in this way will be built when you use `R CMD build` to create your package tarball. That means anyone installing your package will have it available, and it will also be available through CRAN if you choose to publish your package. You can preview what it will look like with `devtools::build_vignettes`. If you use pkgdown, it will also be built into an article when you use `pkgdown::build_site()`. 
 
-You can check out our example for pkgnet to see what one looks like (it's actually slightly customized---we used the `pkg_reporters` parameter). You can find the regular version on [CRAN](https://cran.r-project.org/web/packages/pkgnet/vignettes/pkgnet-report.html) or the pkgdown version on [our website](https://uptakeopensource.github.io/pkgnet/articles/pkgnet-report.html). 
+You can check out our [example for pkgnet](https://uptakeopensource.github.io/pkgnet-gallery/exhibits/pkgnet-vignette/pkgnet-vignette.html) to see what one looks like (it's actually slightly customized---we used the `pkg_reporters` parameter). 
 
 ## Add your package to the pkgnet Gallery
 
