--- a/inst/package_report/package_dependency_reporter.Rmd
+++ b/inst/package_report/package_dependency_reporter.Rmd
@@ -5,7 +5,13 @@ output: html_document
 
 ## Dependency Network
 
-This section analyzes the recursive package dependencies of **`r reporter$pkg_name`**. 
+This section analyzes the recursive package dependencies of **`r reporter$pkg_name`**.
+
+In the plot below, you'll see the following colors:
+
+- gray: **`r reporter$pkg_name`**
+- green: R packages available [in every R session by default](https://cran.r-project.org/doc/manuals/r-release/R-admin.html#Default-packages)
+- blue: third-party R packages
 
 ```{r echo = FALSE, error = TRUE}
 reporter$calculate_default_measures()
