--- a/vignettes/pkgnet-intro.Rmd
+++ b/vignettes/pkgnet-intro.Rmd
@@ -10,6 +10,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
+
 ```{r setupVignette, include = FALSE}
 
 ## NOTE:    Vignettes are built within their own environment. 
@@ -34,7 +35,6 @@ knitr::opts_chunk$set(
   out.width='100%'
 )
 ```
-
 
 <!--  STYLE SET UP FOR TWO COLUMN SECTIONS  -->
 <style>
@@ -174,6 +174,7 @@ As a sample, here's how the **Function Network Visualization** looks for `baseba
 
 <div class="column-left">
 #### Default
+
 ```{r demoVis1, fig.height=3, message=FALSE, warning=FALSE, echo=FALSE}
 pkgnet:::silence_logger()
 funcReporter1 <- pkgnet::FunctionReporter$new()
@@ -204,7 +205,7 @@ funcReporter2 <- pkgnet::FunctionReporter$new()
 funcReporter2$layout_type <- "layout_as_tree"
 funcReporter2$set_package(
     pkg_name = "baseballstats"
-    , pkg_path = system.file('baseballstats',package="pkgnet")
+    , pkg_path = pkgload::pkg_path(system.file('baseballstats',package="pkgnet"))
 )
 funcReporter2$calculate_default_measures()
 g <- visNetwork::visHierarchicalLayout(
